package com.nanyin.pattern.flyweight;

public interface MyString {
    void create(String outerState);
}
